<resources>
    <string name="Parse_error_dlg_text">解析软件包时出现问题。</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="activity_not_found">未安装该应用。</string>
    <string name="agreement_dialog_negative_text">取消</string>
    <string name="agreement_dialog_positive_text">确认</string>
    <string name="agreement_dialog_privacy_title">小鹏汽车应用商店隐私政策</string>
    <string name="agreement_dialog_protocol_title">小鹏汽车应用商店用户协议</string>
    <string name="agreement_dialog_tip">需要同意用户协议</string>
    <string name="agreement_merge">和</string>
    <string name="agreement_privacy_content">隐私政策</string>
    <string name="agreement_protocol_content">用户协议</string>
    <string name="agreement_read_content">我已经阅读并同意</string>
    <string name="alipay_authorize_text">支付宝已授权</string>
    <string name="alipay_logout_text">点击退出</string>
    <string name="alipay_mini_program_policy">小程序内具体服务由第三方开发者提供，使用时请登录支付宝账号；\n 车载系统退出小鹏账号时，小程序中登录的支付宝账号也会同步退出。</string>
    <string name="alipay_progress_desc">初始化中，预计还剩 %s\n请保持网络畅通并耐心等待</string>
    <string name="app_config_icon_mask">M50,0 C10,0 0,10 0,50 0,90 10,100 50,100 90,100 100,90 100,50 100,10 90,0 50,0 Z</string>
    <string name="app_deleting">正在卸载%s</string>
    <string name="app_from_mobile_download_complete">在小鹏app选择的应用已下载完成，快去使用吧~</string>
    <string name="app_from_mobile_download_complete_title">应用下载完成</string>
    <string name="app_from_mobile_notification_ok">好的</string>
    <string name="app_from_mobile_notification_wake_words">好,好的,打开,OK</string>
    <string name="app_local_state_read_permission_desc">Permission for reading appstore local states.</string>
    <string name="app_local_state_read_permission_label">Permission for reading appstore local states.</string>
    <string name="app_name">xpAppStore</string>
    <string name="app_remote_state_read_permission_desc">Permission for reading app state from remote.</string>
    <string name="app_remote_state_read_permission_label">Permission for reading app state from remote.</string>
    <string name="app_remote_state_write_permission_desc">Permission for writing app state.</string>
    <string name="app_remote_state_write_permission_label">Permission for writing app state.</string>
    <string name="app_state_error">当前应用状态不正确，请重试</string>
    <string name="app_suspend">开发者正在加紧维护此应用，敬请期待</string>
    <string name="app_suspend_force_update">请在应用商店进行更新后，再尝试使用。</string>
    <string name="app_suspend_force_updating">应用正在更新，请稍后再试。</string>
    <string name="app_suspend_normal">该应用最新版本在应用商店未上架，敬请期待。</string>
    <string name="app_suspend_title">应用维护中</string>
    <string name="app_suspend_update_title">应用需要更新</string>
    <string name="app_version">版本</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applet_open_error">打开异常，请稍后再试</string>
    <string name="applist_label">b我的应用</string>
    <string name="appstore_label">c应用商店</string>
    <string name="appstore_label_app">应用商店</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="btn_cancel">停止</string>
    <string name="btn_deleting_app">正在删除…</string>
    <string name="btn_dismiss">知道了</string>
    <string name="btn_download_app">下载</string>
    <string name="btn_download_app_error">下载失败</string>
    <string name="btn_go_retry">重试</string>
    <string name="btn_go_update">去更新</string>
    <string name="btn_last_view_package">上次浏览</string>
    <string name="btn_open_app">打开</string>
    <string name="btn_pause_app">暂停</string>
    <string name="btn_pending_app">等待中…</string>
    <string name="btn_resume_app">继续</string>
    <string name="btn_upgrade_app">更新</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="contact_text">若有任何建议及应用分享，请联系\nappstore@x-peng.cn</string>
    <string name="date_format">yyyy.MM.dd</string>
    <string name="debug_account_title">是否需要登录</string>
    <string name="debug_close">关闭</string>
    <string name="debug_close_kill">结束进程</string>
    <string name="debug_env">默认</string>
    <string name="debug_env_pre">预发布环境</string>
    <string name="debug_env_test">测试环境</string>
    <string name="debug_host_title">切换环境</string>
    <string name="debug_title">Debug</string>
    <string name="delete_forbidden">当前应用正在安装中，暂不可卸载</string>
    <string name="detail_cancel_confirm_desc">停止下载会重置当前的下载进度，确认停止吗？</string>
    <string name="detail_cancel_confirm_title">停止下载</string>
    <string name="detail_page_no_app">没有此应用的数据哦</string>
    <string name="detail_permission_title">权限获取说明 &gt;</string>
    <string name="detail_private_title">隐私政策 &gt;</string>
    <string name="dialog_negative_btn">取消</string>
    <string name="dialog_positive_btn">确定</string>
    <string name="dialog_uninstall_tips">确定删除“%s”吗</string>
    <string name="download_failed">网络不佳，%s下载暂停</string>
    <string name="downlond_remaining_time_greater_hour1">%02d小时 %02d分钟 %02d秒</string>
    <string name="downlond_remaining_time_greater_hour12">大于12小时</string>
    <string name="downlond_remaining_time_greater_minute1">%02d分钟 %02d秒</string>
    <string name="downlond_remaining_time_minute0">%d秒</string>
    <string name="downlond_remaining_time_none">…</string>
    <string name="edit_mode_not_support_tips">暂不支持编辑功能</string>
    <string name="edit_mode_tips">Tips：轻触空白区域可退出编辑模式</string>
    <string name="empty_data_page">没有数据</string>
    <string name="enter_upgrade">进入更新</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exit_authorization">退出授权</string>
    <string name="exit_the_account">您已退出支付宝账户</string>
    <string name="expand">展开详情</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fade_anim_listener_tag">fade_anim_listener_tag</string>
    <string name="format_progress">%.2f%%</string>
    <string name="fragment_pending_update_list_no_app_upgrade_text">无应用更新</string>
    <string name="fragment_permission_title">权限获取说明</string>
    <string name="fragment_policy_additional">以下内容由开发者提供</string>
    <string name="fragment_policy_title">隐私政策</string>
    <string name="group_favor">常用</string>
    <string name="group_normal">推荐</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_badging_service_title">Show Notification Dots</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="icon_downloading_desc">正在下载…</string>
    <string name="icon_installing_desc">正在安装…</string>
    <string name="icon_pause_desc">已暂停</string>
    <string name="icon_uninstalling_desc">正在删除…</string>
    <string name="icon_upgrading_desc">正在更新…</string>
    <string name="install_failed">%s安装失败</string>
    <string name="installer_install_failed">安装提示</string>
    <string name="item_detail_desc_title">应用介绍</string>
    <string name="item_detail_developer_info">相关信息</string>
    <string name="item_detail_developer_title">开发者</string>
    <string name="item_detail_developer_title_subtitle">开发者：</string>
    <string name="item_detail_image_title">应用预览</string>
    <string name="item_detail_update_title">更新信息</string>
    <string name="item_detail_version">版本%s</string>
    <string name="item_top_app_button_content">下载</string>
    <string name="item_top_update_title">待更新应用</string>
    <string name="item_view_role_description">Tab</string>
    <string name="leak_canary_display_activity_label">AppStoreLeaks</string>
    <string name="list_edit_not_support">暂不支持编辑功能</string>
    <string name="log_already_upload">日志已经上传</string>
    <string name="logic_notification_channel">AppStore Logic</string>
    <string name="logic_notification_title">AppStore refreshing data...</string>
    <string name="login_tips">请登录小鹏账号后再操作</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">%1$s o\'clock</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="no_upgrade_desc">你暂无应用\n待更新</string>
    <string name="permission_no_data_hint">开发者正在努力完善中…</string>
    <string name="upgrade_all_btn_desc">全部更新</string>
    <string name="upgrade_list_title">待更新列表</string>
</resources>