<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <FrameLayout android:id="@+id/agreement_web_view_layout" android:background="@color/transparent" android:layout_width="match_parent" android:layout_height="@dimen/agreement_dialog_content_web_view_height">
        <com.xiaopeng.xui.widget.XScrollView android:id="@+id/web_view_parent" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="@dimen/x_dialog_content_scrollbar_out_padding" android:layout_marginEnd="@dimen/x_dialog_content_scrollbar_out_padding"/>
        <com.xiaopeng.xui.widget.XLoading android:id="@+id/loading" android:layout_width="match_parent" android:layout_height="match_parent"/>
    </FrameLayout>
    <com.xiaopeng.xui.widget.XCheckBox android:textSize="@dimen/x_font_title_04_size" android:gravity="center" android:id="@+id/checked_agree" android:paddingTop="@dimen/agreement_dialog_content_agreement_padding_top" android:paddingBottom="@dimen/agreement_dialog_content_agreement_padding_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/agreement_dialog_content_agreement_margin_top" android:checked="false" android:text="@string/agreement_read_content" android:layout_below="@+id/agreement_web_view_layout" android:layout_marginStart="@dimen/agreement_dialog_content_agreement_margin_start"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_title_04_size" android:id="@+id/agreement_protocol" android:paddingTop="@dimen/agreement_dialog_content_agreement_padding_top" android:paddingBottom="@dimen/agreement_dialog_content_agreement_padding_bottom" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/agreement_dialog_content_agreement_margin_top" android:text="@string/agreement_protocol_content" android:layout_below="@+id/agreement_web_view_layout" android:layout_alignBaseline="@+id/checked_agree" android:layout_toEndOf="@+id/checked_agree"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_title_04_size" android:textColor="@color/x_theme_text_02" android:id="@+id/agreement_merge" android:paddingTop="@dimen/agreement_dialog_content_agreement_padding_top" android:paddingBottom="@dimen/agreement_dialog_content_agreement_padding_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/agreement_dialog_content_agreement_margin_top" android:text="@string/agreement_merge" android:layout_below="@+id/agreement_web_view_layout" android:layout_alignBaseline="@+id/checked_agree" android:layout_toEndOf="@+id/agreement_protocol"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_title_04_size" android:id="@+id/agreement_privacy" android:paddingTop="@dimen/agreement_dialog_content_agreement_padding_top" android:paddingBottom="@dimen/agreement_dialog_content_agreement_padding_bottom" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/agreement_dialog_content_agreement_margin_top" android:text="@string/agreement_privacy_content" android:layout_below="@+id/agreement_web_view_layout" android:layout_alignBaseline="@+id/checked_agree" android:layout_toEndOf="@+id/agreement_merge"/>
</RelativeLayout>
