<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:tag="layout/international_pending_upgrade_fragment_0" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="@dimen/upgrade_content_margin_top" android:layout_marginStart="@dimen/content_margin_horizontal" android:layout_marginEnd="@dimen/content_margin_horizontal">
    <RelativeLayout android:gravity="center_vertical" android:tag="binding_1" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_body_01_size" android:textColor="@color/x_theme_text_01" android:gravity="center" android:id="@+id/fragment_pending_update_list_title" android:layout_width="wrap_content" android:layout_height="56dp" android:text="@string/upgrade_list_title" android:layout_alignParentTop="true" android:layout_alignParentStart="true"/>
        <com.xiaopeng.xui.widget.XButton android:textSize="@dimen/x_font_body_02_size" android:gravity="center" android:tag="binding_2" android:paddingLeft="32dp" android:paddingRight="32dp" android:layout_width="wrap_content" android:layout_height="56dp" android:text="@string/upgrade_all_btn_desc" android:layout_toRightOf="@+id/fragment_pending_update_list_title" android:layout_alignTop="@+id/fragment_pending_update_list_title" android:layout_alignBottom="@+id/fragment_pending_update_list_title" android:layout_marginStart="70dp" style="@style/XButton.Real.Small.Inter_Positive"/>
        <androidx.recyclerview.widget.RecyclerView android:orientation="horizontal" android:id="@+id/recycler_view" android:tag="binding_3" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/fragment_pending_update_list_title" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    </RelativeLayout>
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@+id/fragment_pending_update_no_update_container" android:tag="binding_4" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="174dp">
        <com.xiaopeng.xui.widget.XImageView android:layout_width="@dimen/fragment_pending_upgrade_no_app_icon_width_height" android:layout_height="@dimen/fragment_pending_upgrade_no_app_icon_width_height" android:src="@drawable/x_ic_xxlarge_nodata"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_title_03_size" android:textColor="@color/x_theme_text_01" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/fragment_pending_upgrade_no_app_title_margin_top" android:text="@string/fragment_pending_update_list_no_app_upgrade_text"/>
    </LinearLayout>
</LinearLayout>
