<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:tag="layout/fragment_pending_update_0" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="@dimen/upgrade_content_margin_top" android:paddingStart="@dimen/pending_upgrade_content_margin_horizontal" android:paddingEnd="@dimen/pending_upgrade_content_margin_horizontal">
    <RelativeLayout android:gravity="center_vertical" android:tag="binding_1" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:id="@+id/fragment_pending_update_title_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentStart="true">
            <com.xiaopeng.xui.widget.XTextView android:textColor="@color/x_theme_text_01" android:gravity="center_vertical" android:id="@+id/fragment_pending_update_list_title" android:layout_height="@dimen/upgrade_all_btn_height" android:text="@string/upgrade_list_title" style="@style/PendingUpdateTipTextStyle"/>
            <com.xiaopeng.xui.widget.XButton android:textSize="@dimen/item_app_btn_text_size" android:tag="binding_2" android:layout_width="@dimen/upgrade_all_btn_width" android:layout_height="@dimen/upgrade_all_btn_height" android:text="@string/upgrade_all_btn_desc" android:layout_marginStart="@dimen/upgrade_all_btn_margin_start" style="@style/PendingUpdateButtonStyle"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView android:id="@+id/recycler_view" android:tag="binding_3" android:paddingTop="@dimen/upgrade_item_divider_height" android:paddingBottom="@dimen/pending_update_list_padding_bottom" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/fragment_pending_update_title_layout"/>
    </RelativeLayout>
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@+id/fragment_pending_update_no_update_container" android:tag="binding_4" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/pending_update_no_update_container_margin_top">
        <com.xiaopeng.xui.widget.XImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/x_ic_xxlarge_nodata"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_title_03_size" android:textColor="@color/x_theme_text_01" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/fragment_pending_upgrade_no_app_title_margin_top" android:text="@string/fragment_pending_update_list_no_app_upgrade_text"/>
    </LinearLayout>
</FrameLayout>
