<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="100dp">
    <ImageView android:id="@+id/iv_icon" android:layout_width="@dimen/item_permission_app_icon_size" android:layout_height="@dimen/item_permission_app_icon_size" android:layout_marginTop="@dimen/item_permission_icon_margin_top" android:layout_marginStart="@dimen/item_permission_icon_margin_start" app:bgColor="@color/legacy_icon_background" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_title_03_size" android:textColor="@color/x_theme_text_01" android:id="@+id/policy_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fragment_policy_title" android:layout_marginStart="@dimen/item_permission_web_view_margin_top" app:layout_constraintBottom_toTopOf="@+id/policy_additional" app:layout_constraintLeft_toRightOf="@+id/iv_icon" app:layout_constraintTop_toTopOf="@+id/iv_icon"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_body_04_size" android:textColor="@color/x_theme_text_03" android:id="@+id/policy_additional" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fragment_policy_additional" android:layout_marginStart="@dimen/item_permission_web_view_margin_top" app:layout_constraintBottom_toBottomOf="@+id/iv_icon" app:layout_constraintLeft_toRightOf="@+id/iv_icon" app:layout_constraintTop_toBottomOf="@+id/policy_title"/>
    <com.xiaopeng.xui.view.XView android:id="@+id/line" android:background="@color/item_permission_line_color" android:visibility="gone" android:layout_width="0dp" android:layout_height="0.5dp" android:layout_marginTop="@dimen/item_permission_line_margin_top" android:layout_marginStart="@dimen/item_permission_icon_margin_start" android:layout_marginEnd="@dimen/item_permission_title_margin_start" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/iv_icon"/>
    <FrameLayout android:id="@+id/policy_web_view_layout" android:background="@drawable/shape_radius" android:visibility="gone" android:layout_width="0dp" android:layout_height="0dp" android:layout_marginTop="@dimen/item_permission_web_view_margin_top" android:layout_marginBottom="@dimen/item_permission_web_view_margin_bottom" android:layout_marginStart="@dimen/item_permission_web_view_margin_start" android:layout_marginEnd="@dimen/item_permission_web_view_margin_start" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/iv_icon"/>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/linear_view" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <com.xiaopeng.xui.widget.XImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/x_ic_xxlarge_nodata"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/item_permission_error_size" android:textColor="@color/x_theme_text_01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/fragment_pending_upgrade_no_app_title_margin_top" android:text="@string/permission_no_data_hint"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
