<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:tag="layout/item_banner_package_0" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/item_home_banner_margin_top">
    <com.xiaopeng.appstore.appstore_ui.view.ShadowLayout android:id="@+id/shadow_layout" android:layout_width="@dimen/item_home_update_banner_width" android:layout_height="@dimen/item_home_banner_height" android:layout_marginTop="@dimen/item_home_banner_content_margin_top" android:layout_marginEnd="@dimen/app_package_margin_start" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0" app:sl_cornerRadius="@dimen/bg_card_radius" app:sl_shadowColor="@color/card_shadow_color" app:sl_shadowRadius="@dimen/shadow_radius" style="@style/BannerCardStyle">
        <com.xiaopeng.xui.widget.XRelativeLayout android:id="@+id/layout_pending_update" android:background="@drawable/bg_shadow_card" android:layout_width="match_parent" android:layout_height="match_parent">
            <ImageView android:id="@+id/iv_update_bg" android:layout_width="match_parent" android:layout_height="match_parent" android:scaleType="fitXY"/>
            <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/item_home_update_title_text_size" android:textColor="@color/x_theme_primary_normal" android:id="@+id/tv_upgrade_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/banner_content_margin" android:text="@string/item_top_update_title" android:layout_marginStart="@dimen/banner_content_margin"/>
            <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/item_home_update_text_size" android:textColor="@color/x_theme_text_01" android:id="@+id/tv_upgrade_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/item_home_update_text_margin_top" android:text="@string/no_upgrade_desc" android:layout_below="@+id/tv_upgrade_title" android:lineSpacingMultiplier="1" android:layout_marginStart="@dimen/banner_content_margin"/>
            <com.xiaopeng.xui.widget.XButton android:textSize="@dimen/item_app_btn_text_size" android:layout_gravity="bottom" android:id="@+id/btn_enter" android:visibility="gone" android:layout_width="@dimen/item_home_update_btn_width" android:layout_height="@dimen/item_home_update_btn_height" android:layout_marginBottom="@dimen/banner_content_margin" android:text="@string/enter_upgrade" android:layout_alignParentBottom="true" android:layout_marginStart="@dimen/banner_content_margin" style="@style/XButton.Real.Small.Positive"/>
        </com.xiaopeng.xui.widget.XRelativeLayout>
    </com.xiaopeng.appstore.appstore_ui.view.ShadowLayout>
    <com.xiaopeng.appstore.appstore_ui.view.ShadowLayout android:id="@+id/banner_shadow_parent" android:layout_width="@dimen/item_home_banner_width" android:layout_height="@dimen/item_home_banner_height" android:layout_marginTop="@dimen/item_home_banner_content_margin_top" android:layout_marginStart="@dimen/app_package_margin_start" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:sl_cornerRadius="@dimen/bg_card_radius" app:sl_shadowColor="@color/card_shadow_color" app:sl_shadowRadius="@dimen/shadow_radius" style="@style/BannerCardStyle">
        <com.xiaopeng.appstore.common_ui.IdleDetectLayout android:id="@+id/viewPager_detectLayout" android:layout_width="match_parent" android:layout_height="match_parent">
            <androidx.viewpager2.widget.ViewPager2 android:id="@+id/vp_banner" android:layout_width="match_parent" android:layout_height="match_parent"/>
        </com.xiaopeng.appstore.common_ui.IdleDetectLayout>
    </com.xiaopeng.appstore.appstore_ui.view.ShadowLayout>
    <com.xiaopeng.appstore.appstore_ui.view.ViewPagerIndicator android:id="@+id/indicator" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/indicator_margin" android:layout_marginStart="@dimen/indicator_margin" app:layout_constraintBottom_toBottomOf="@+id/banner_shadow_parent" app:layout_constraintStart_toStartOf="@+id/banner_shadow_parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
